public class StockData
{
    public string? Papel { get; set; }
    public decimal Cotacao { get; set; }
    public decimal Pl { get; set; }
    public decimal Pvp { get; set; }
    public decimal Psr { get; set; }
    public decimal DivYield { get; set; }
    public decimal PAtivo { get; set; }
    public decimal PCapGiro { get; set; }
    public decimal PEbit { get; set; }
    public decimal PAtivCircLiq { get; set; }
    public decimal EvEbit { get; set; }
    public decimal EvEbitda { get; set; }
    public decimal MrgEbit { get; set; }
    public decimal MrgLiq { get; set; }
    public decimal LiqCorr { get; set; }
    public decimal Roic { get; set; }
    public decimal Roe { get; set; }
    public decimal Liq2Meses { get; set; }
    public decimal PatrimLiq { get; set; }
    public decimal DivBrutPatrim { get; set; }
    public decimal CrescRec5a { get; set; }
}
